# firebase_template_authentication

./: .gitignore  auth.py  controller.py  decorators.py  form.py  google_oauth.py  pyproject.toml  readme.md  requirements.txt
firebase_authentication_client/: package.json
firebase_authentication_client/src/: App.js
firebase_authentication_client/src/components/navbar/: Navbar.css  Navbar.js
static/javascript/: main.js  package.json
static/javascript/.parcel-cache/: 02d11406e30eeab1  7a7cd45db6ddaf09.txt  a48c707dc897791a  data.mdb  ec29b2d76a2615bc  lock.mdb
static/javascript/src/: index.html
templates/: base.html  index.html  login.html  profile.html  signup.html
